Fix Bug: Front-end blog list word-wrap

--- a/MSDNDashboard/Content/Site.css
+++ b/MSDNDashboard/Content/Site.css
@@ -168,6 +168,10 @@ div.main-title {
     margin-right: 0;
 }
 
+#bloglistindetails a {
+    word-wrap: break-word;
+}
+
 .a-white {
     color: white;
 }
